--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="../images/my_company_logo.png"/>
+    <img src=".." alt=".."/>
+    <img src=".." alt=".." title="Logo">
+
   </body>
 </html>
