--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <img src="../images/my_company_logo.png"/>
-    <img src=".." alt=".."/>
-    <img src=".." alt=".." title="Logo">
+    <img
+  src="https://i.imgur.com/H1qsYEl.png"
+  alt="comedic crow gets wholesome support"
+/>
+<img
+  src="../images/my_company_logo.png"
+  alt="my company name"
+  title="We're here to help you!"
+/>
+<img
+src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+alt="lion](https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+title="lion"
 
   </body>
 </html>
